# exploring-sfml-project

./: .gitignore  CMakeLists.txt  Info.plist
include/: action.h  actiontarget.tpl  configuration.h  detect.h  detectmanager.tpl  detecttarget.tpl  enemy.h  entity.h  game.h  player.h  quadtree.h  random.h  resourcemanager.h  resourcemanager.tpl  sensing.h  world.h
src/: configuration.cpp  detect.cpp  enemy.cpp  entity.cpp  game.cpp  main.cpp  player.cpp  quadtree.cpp  sensing.cpp  world.cpp
